// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBellIcon renders when the drawer is closed and there are new notifications 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--closed c-notification-bell-icon--unread"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg/>",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when the drawer is closed and there are not new notifications 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--closed c-notification-bell-icon--read"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg/>",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when the drawer is open and there are new notifications 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--open c-notification-bell-icon--unread"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg/>",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when the drawer is open and there are not new notifications 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--open c-notification-bell-icon--read"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg/>",
    }
  }
/>
`;
